--- a/app/globals.css
+++ b/app/globals.css
@@ -15,6 +15,18 @@ body {
   max-width: 100vw;
   overflow-x: hidden;
 }
+.post{
+  min-height: 400px;
+  
+  border: 0px;
+}
+.post button{
+  position: absolute;
+  bottom: 2px;
+  left: 0;
+  width: 100%;
+  
+}
 
 body {
   color: var(--foreground);
@@ -39,4 +51,40 @@ a {
   html {
     color-scheme: dark;
   }
+}
+
+.main-div {
+  padding: 20px;
+  text-align: center;
+  display: grid;
+  place-items: center;
+  justify-self: center;
+
+
+  width: 100%;
+  height: 100vh;
+}
+
+nav {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+
+  background-color: rgb(65, 65, 65);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.nav-list {
+
+  padding: 5px;
+  margin-left: 10px;
+  list-style: none;
+  display: flex;
+  gap: 20px;
+}
+.nav-list a {
+  color: white;
+  text-decoration: none;
+  font-weight: bold;
 }
