--- a/app/globals.css
+++ b/app/globals.css
@@ -27,7 +27,9 @@ body {
   width: 100%;
   
 }
-
+.arabic {
+  direction: rtl;
+}
 body {
   color: var(--foreground);
   background: var(--background);
@@ -45,6 +47,20 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+.div_flex{
+  display: flex;
+  justify-content: space-between;
+  
+}
+.temainfo{
+  font-size: 12px;
+  font-weight: 900;
+}
+
+.form{
+  background-color: #e6e6e6;
 }
 
 @media (prefers-color-scheme: dark) {
